<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tell me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_1">ask</string>
    <string name="tab_title_2">practice</string>
    <string name="translate">translate</string>
    <string name="save">save</string>
    <string name="speak">speak</string>
    <string name="clear">clear</string>
    <string name="listen">listen</string>
    <string name="quiztest">quiz</string>
    <string name="speaktest">speak</string>
    <string name="listentest">listen</string>
    <string name="showPastBoard">clipboard</string>

    <string name="voiceregognition">Voice Regonition running </string>
    
</resources>
